k8s/mern/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-server
  namespace: mern
  labels:
    app: mern-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mern-server
  template:
    metadata:
      labels:
        app: mern-server
    spec:
      containers:
        - name: mern-server
          image: 090420481900.dkr.ecr.eu-central-1.amazonaws.com/case-mern-server:latest
          ports:
            - containerPort: 5050
