k8s/mern/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-client
  namespace: mern
spec:
  selector:
    app: mern-client
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
