k8s/mern/service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: mern
spec:
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  type: ClusterIP
