k8s/mern/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  namespace: mern
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: mern.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mern-client
                port:
                  number: 80
